** gsl_cheb_eval_mode now uses the same error estimate as
gsl_cheb_eval_err.

** Improved gsl_sf_legendre_sphPlm_e to avoid underflow with large
arguments.

** Added updated Knuth generator, gsl_rng_knuthran2002, from 9th
printing of "The Art of Computer Programming".  Fixes various
weaknesses in the earlier version gsl_rng_knuthran.  See
http://www-cs-faculty.stanford.edu/~knuth/news02.htm

** The functions gsl_multifit_fsolver_set, gsl_multifit_fdfsolver_set
and gsl_multiroot_fsolver_set, gsl_multiroot_fdfsolver_set now have a
const qualifier for the input vector x, reflecting their actual usage.

** gsl_sf_expint_E2(x) now returns the correct value 1 for x==0,
instead of NaN.

** The gsl_ran_gamma function now uses the Marsaglia-Tsang fast gamma
method of gsl_ran_gamma_mt by default.

** The matrix and vector min/max functions now always propagate any
NaNs in their input.

** Prevented NaN occuring for extreme parameters in
gsl_cdf_fdist_{P,Q}inv and gsl_cdf_beta_{P,Q}inv

** Corrected error estimates for the angular reduction functions
gsl_sf_angle_restrict_symm_err and gsl_sf_angle_restrict_pos_err.
Fixed gsl_sf_angle_restrict_pos to avoid possibility of returning
small negative values.  Errors are now reported for out of range
negative arguments as well as positive.  These functions now return
NaN when there would be significant loss of precision.

** Corrected an error in the higher digits of M_PI_4 (this was beyond
the limit of double precision, so double precision results are not
affected).

** gsl_root_test_delta now always returns success if two iterates are
the same, x1==x0.

** A Japanese translation of the reference manual is now available
from the GSL webpage at http://www.gnu.org/software/gsl/ thanks to
Daisuke TOMINAGA.

** Added new functions for basis splines, see the "Basis Splines"
chapter in the GSL Reference Manual for details.

** Added new functions for testing the sign of vectors and matrices,