@@ -279,7 +279,8 @@ function (section 6.5).
 @deftypefunx int gsl_sf_beta_e (double @var{a}, double @var{b}, gsl_sf_result * @var{result})
 @cindex Beta function
 These routines compute the Beta Function, @math{B(a,b) =
-\Gamma(a)\Gamma(b)/\Gamma(a+b)} for @math{a > 0}, @math{b > 0}.
+\Gamma(a)\Gamma(b)/\Gamma(a+b)} subject to @math{a} and @math{b} not
+being negative integers.
 @comment exceptions: GSL_EDOM, GSL_EOVRFLW, GSL_EUNDRFLW
 @end deftypefun
 
@@ -287,7 +288,8 @@ These routines compute the Beta Function, @math{B(a,b) =
 @deftypefunx int gsl_sf_lnbeta_e (double @var{a}, double @var{b}, gsl_sf_result * @var{result})
 @cindex logarithm of Beta function
 These routines compute the logarithm of the Beta Function, @math{\log(B(a,b))}
-for @math{a > 0}, @math{b > 0}.
+subject to @math{a} and @math{b} not
+being negative integers.
 @comment exceptions: GSL_EDOM
 @end deftypefun
 
