@@ -29,19 +29,43 @@
 
 #include "error.h"
 
+static double
+isnegint (const double x) 
+{
+  return (x < 0) && (x == floor(x));
+}
+
 int
 gsl_sf_lnbeta_e(const double x, const double y, gsl_sf_result * result)
 {
-  /* CHECK_POINTER(result) */
-
-  if(x <= 0.0 || y <= 0.0) {
+  double sgn;
+  int status = gsl_sf_lnbeta_sgn_e(x,y,result,&sgn);
+  if (sgn == -1) {
     DOMAIN_ERROR(result);
   }
-  else {
+  return status;
+}
+
+int
+gsl_sf_lnbeta_sgn_e(const double x, const double y, gsl_sf_result * result, double * sgn)
+{
+  /* CHECK_POINTER(result) */
+
+  if(x == 0.0 || y == 0.0) {
+    *sgn = 0.0;
+    DOMAIN_ERROR(result);
+  } else if (isnegint(x) || isnegint(y)) {
+    *sgn = 0.0;
+    DOMAIN_ERROR(result); /* not defined for negative integers */
+  }
+
+  /* See if we can handle the postive case with min/max < 0.2 */
+
+  if (x > 0 && y > 0) {
     const double max = GSL_MAX(x,y);
     const double min = GSL_MIN(x,y);
     const double rat = min/max;
-
+    
     if(rat < 0.2) {
       /* min << max, so be careful
        * with the subtraction
@@ -68,19 +92,24 @@ gsl_sf_lnbeta_e(const double x, const double y, gsl_sf_result * result)
       result->val  = lnpre_val + lnpow_val;
       result->err  = lnpre_err + lnpow_err;
       result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
+      *sgn = 1.0;
       return GSL_SUCCESS;
     }
-    else {
-      gsl_sf_result lgx, lgy, lgxy;
-      int stat_gx  = gsl_sf_lngamma_e(x, &lgx);
-      int stat_gy  = gsl_sf_lngamma_e(y, &lgy);
-      int stat_gxy = gsl_sf_lngamma_e(x+y, &lgxy);
-      result->val  = lgx.val + lgy.val - lgxy.val;
-      result->err  = lgx.err + lgy.err + lgxy.err;
-      result->err += GSL_DBL_EPSILON * (fabs(lgx.val) + fabs(lgy.val) + fabs(lgxy.val));
-      result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
-      return GSL_ERROR_SELECT_3(stat_gx, stat_gy, stat_gxy);
-    }
+  }
+
+  /* General case - Fallback */
+  {
+    gsl_sf_result lgx, lgy, lgxy;
+    double sgx, sgy, sgxy, xy = x+y;
+    int stat_gx  = gsl_sf_lngamma_sgn_e(x, &lgx, &sgx);
+    int stat_gy  = gsl_sf_lngamma_sgn_e(y, &lgy, &sgy);
+    int stat_gxy = gsl_sf_lngamma_sgn_e(xy, &lgxy, &sgxy);
+    *sgn = sgx * sgy * sgxy;
+    result->val  = lgx.val + lgy.val - lgxy.val;
+    result->err  = lgx.err + lgy.err + lgxy.err;
+    result->err += GSL_DBL_EPSILON * (fabs(lgx.val) + fabs(lgy.val) + fabs(lgxy.val));
+    result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
+    return GSL_ERROR_SELECT_3(stat_gx, stat_gy, stat_gxy);
   }
 }
 
@@ -88,23 +117,33 @@ gsl_sf_lnbeta_e(const double x, const double y, gsl_sf_result * result)
 int
 gsl_sf_beta_e(const double x, const double y, gsl_sf_result * result)
 {
-  if(x < 50.0 && y < 50.0) {
+  if((x > 0 && y > 0) && x < 50.0 && y < 50.0) {
+    /* Handle the easy case */
     gsl_sf_result gx, gy, gxy;
     gsl_sf_gamma_e(x, &gx);
     gsl_sf_gamma_e(y, &gy);
     gsl_sf_gamma_e(x+y, &gxy);
     result->val  = (gx.val*gy.val)/gxy.val;
-    result->err  = gx.err * gy.val/gxy.val;
-    result->err += gy.err * gx.val/gxy.val;
-    result->err += (gx.val*gy.val)/(gxy.val*gxy.val) * gxy.err;
+    result->err  = gx.err * fabs(gy.val/gxy.val);
+    result->err += gy.err * fabs(gx.val/gxy.val);
+    result->err += fabs((gx.val*gy.val)/(gxy.val*gxy.val)) * gxy.err;
     result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
     return GSL_SUCCESS;
   }
-  else {
+  else if (isnegint(x) || isnegint(y)) {
+    DOMAIN_ERROR(result);
+  } else if (isnegint(x+y)) {  /* infinity in the denominator */
+    result->val = 0.0;
+    result->err = 0.0;
+    return GSL_SUCCESS;
+  } else {
     gsl_sf_result lb;
-    int stat_lb = gsl_sf_lnbeta_e(x, y, &lb);
+    double sgn;
+    int stat_lb = gsl_sf_lnbeta_sgn_e(x, y, &lb, &sgn);
     if(stat_lb == GSL_SUCCESS) {
-      return gsl_sf_exp_err_e(lb.val, lb.err, result);
+      int status = gsl_sf_exp_err_e(lb.val, lb.err, result);
+      result->val *= sgn;
+      return status;
     }
     else {
       result->val = 0.0;
